@@ -1,3 +1,3 @@
-Invalid file descriptor -1
+File descriptor -1 Invalid file descriptor
    at 0x........: close (in /...libc...)
    by 0x........: main
